# cmake-minimal

./: CMakeLists.txt
